force-app/main/default/objects/ssot__CareBarrier2__dlm/ssot__CareBarrier2__dlm.object-meta.xml
<CustomObject>
    <mktDataModelAttributes>
        <creationType>Standard</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>false</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Unassigned</objectCategory>
        <referenceEntityGroup>Care Determinant</referenceEntityGroup>
        <referenceEntityName>CareBarrier2</referenceEntityName>
        <referenceEntitySubjectArea>Care Determinant</referenceEntitySubjectArea>
    </mktDataModelAttributes>
</CustomObject>