force-app/main/default/objects/ssot__CareBarrier2__dlm/fields/ssot__CareBarrierPriority__c.field-meta.xml
<CustomField>
    <fullName>ssot__CareBarrierPriority__c</fullName>
    <label>Care Barrier Priority</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CareBarrierPriority</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>