force-app/main/default/objects/ssot__CareBarrier2__dlm/fields/ssot__CareBarrierStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__CareBarrierStatus__c</fullName>
    <label>Care Barrier Status</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CareBarrierStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>