force-app/main/default/objects/ssot__CareBarrier2__dlm/fields/ssot__EffectiveToDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__EffectiveToDate__c</fullName>
    <label>Effective To Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EffectiveToDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Date</type>
</CustomField>