force-app/main/default/objects/ssot__CareBarrier2__dlm/fields/ssot__rel_1721371353013_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1721371353013_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CareBarrier2_AccountId_map_Account_I_rel</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>CareBarrier2_AccountId_map_Account_I_rel</relationshipLabel>
    <relationshipName>rel_1721371353013_end</relationshipName>
    <type>Lookup</type>
</CustomField>